# car-minder

./: README.md
backend/: README.md  pyproject.toml
backend/app/alembic/versions/: 2025_10_29_0022-e2c771131cb0_create_users_table.py  2025_10_29_0047-0e6dbee037dc_create_cars_table.py  2025_10_29_1515-a33e447392ed_create_service_items_table.py  2025_10_29_1516-6671abca8548_create_mileage_logs_table.py  2025_10_30_1401-17c4722ffefa_create_reminders_table.py
backend/app/core/: config.py  db_helper.py
backend/app/core/models/: __init__.py  car.py  mileage_log.py  mixins.py  reminder.py  service_item.py  user.py
docs/: MVP.md
